[UPD] Added header and first main container

--- a/index.html
+++ b/index.html
@@ -15,36 +15,36 @@
 
         <!-- CONTENITORE INTERNO ALL'HEADER -->
         <div class="container">
-            <div class="row">
+            <div class="row align-items-center">
 
                 <!-- TRE COLONNE DUE DA 25% ED UNA DA 50% -->
                 <div class="col-25">
                     <div class="text-left py-10">
-                        Titolo
+                        <img src="img/logo.svg" alt="Discord">
                     </div>
                 </div>
                 <div class="col-50">
                     <ul class="unstyled-list text-center py-10">
                         <li>
-                            <a href="#">link</a>
+                            <a href="#">Scarica</a>
                         </li>
                         <li>
-                            <a href="#">link</a>
+                            <a href="#">Perché Discord</a>
                         </li>
                         <li>
-                            <a href="#">link</a>
+                            <a href="#">Nitro</a>
                         </li>
                         <li>
-                            <a href="#">link</a>
+                            <a href="#">Sicurezza</a>
                         </li>
                         <li>
-                            <a href="#">link</a>
+                            <a href="#">Assistenza</a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-25">
                     <div class="text-right py-10">
-                        logo
+                        <a href="" class="btn btn-white">Accedi</a>
                     </div>
                 </div>
             </div>
@@ -54,10 +54,23 @@
 
     <!-- INIZIO MAIN -->
     <main>
-        <div class="bg-darkblue py-50">
+        <div class="bg-jumbo py-50">
             <div class="container-sm">
                 <div class="row">
                     <div class="col-100">
+                        <h2 class="titolo-block-1 text-center">Il tuo posto per parlare</h2>
+                        <h3 class="h3-block-1 text-center">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica</h3>
+                        <h3 class="h3-block-2 text-center">mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo</h3>
+                        <h3 class="h3-block-3 text-center">assieme, Discord rende più facile chiacchierare ogni giorno e trovarsi più spesso.</h3>
+                        <div class="justify-content-evenly d-flex py-20">
+                            <div class="button-block-1 justify-content-between text-left py-10">
+                                <a href="" class="btn btn-white">&#8595; Scarica per Mac</a> 
+                            </div>
+                            <div class="button-block-1 justify-content-between text-left py-10">
+                                <a href="" class="btn-black btn-black">Apri Discord nel tuo browser</a> 
+                            </div>    
+                        </div>
+                        
 
                     </div>
                 </div>
