[UPD] Added "BG ITEM1.SVG"

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 
     <!-- INIZIO MAIN -->
     <main>
+
+        <!-- INIZIO BG JUMBO -->
         <div class="bg-jumbo py-50">
             <div class="container-sm">
                 <div class="row">
@@ -70,20 +72,26 @@
                                 <a href="" class="btn-black btn-black">Apri Discord nel tuo browser</a> 
                             </div>    
                         </div>
-                        
-
                     </div>
                 </div>
             </div>
         </div>
+        <!-- FINE BG JUMBO -->
+
+        <!-- BG ITEM1.SVG-->
         <div class="py-50">
             <div class="container">
                 <div class="row">
                     <div class="col-60"></div>
-                    <div class="col-40"></div>
+                    <div class="col-40">
+                        <h2 class="titolo-block-2 text-align: left;">Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                        <h3 class="h3-block-black text-align: left;">I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</h3>    
+                    </div>
                 </div>
             </div>
         </div>
+        <!-- FINE BG ITEM1.SVG-->
+
         <div class="bg-lightgrey py-50">
             <div class="container">
                 <div class="row">
