--- a/index.html
+++ b/index.html
@@ -84,22 +84,28 @@
                 <div class="row">
                     <div class="col-60"></div>
                     <div class="col-40">
-                        <h2 class="titolo-block-2 text-align: left;">Un luogo a invito con tutto lo spazio necessario per parlare</h2>
-                        <h3 class="h3-block-black text-align: left;">I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</h3>    
+                        <h2 class="titolo-block-2 text-align left">Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                        <h3 class="h3-block-black text-align left">I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</h3>    
                     </div>
                 </div>
             </div>
         </div>
         <!-- FINE BG ITEM1.SVG-->
-
-        <div class="bg-lightgrey py-50">
+        
+        <!-- INIZIO BG ITEM2.SVG -->
+        <div class="py-50">
             <div class="container">
                 <div class="row">
-                    <div class="col-40"></div>
-                    <div class="col-60"></div>
+                    <div class="col-40-2">
+                        <h2 class="titolo-block-2 text-left">Dove trovarsi é facile</h2>
+                        <h3 class="h3-block-black text-align left">Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi instantaneamente senza dover chiamare.</h3>
+                    </div>
+                    <div class="col-60-2"></div>
                 </div>
             </div>
         </div>
+        <!-- FINE BG ITEM2.SVG -->
+
         <div class="py-50">
             <div class="container">
                 <div class="row">
