[UPD] Added "BG ITEM3.SVG"

--- a/index.html
+++ b/index.html
@@ -105,15 +105,21 @@
             </div>
         </div>
         <!-- FINE BG ITEM2.SVG -->
-
+        
+        <!-- INIZIO BG ITEM3.SVG -->
         <div class="py-50">
             <div class="container">
                 <div class="row">
-                    <div class="col-60"></div>
-                    <div class="col-40"></div>
+                    <div class="col-60-3"></div>
+                    <div class="col-40-3">
+                        <h2 class="titolo-block-2 text-left">Da pochi a un fandom</h2>
+                        <h3 class="h3-block-black text-align left">Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai menbri personalizzaabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</h3>
+                    </div>
                 </div>
             </div>
         </div>
+        <!-- FINE BG ITEM3.SVG -->
+
         <div class="bg-lightgrey py-50">
             <div class="container">
                 <div class="row">
