--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
         <div class="py-50">
             <div class="container">
                 <div class="row">
-                    <div class="col-60"></div>
+                    <div class="col-60 bg-center"></div>
                     <div class="col-40">
                         <h2 class="titolo-block-2 text-align left">Un luogo a invito con tutto lo spazio necessario per parlare</h2>
-                        <h3 class="h3-block-black text-align left">I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</h3>    
+                        <h3 class="h3-block text-align left">I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</h3>    
                     </div>
                 </div>
             </div>
@@ -98,9 +98,9 @@
                 <div class="row">
                     <div class="col-40-2">
                         <h2 class="titolo-block-2 text-left">Dove trovarsi é facile</h2>
-                        <h3 class="h3-block-black text-align left">Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi instantaneamente senza dover chiamare.</h3>
+                        <h3 class="h3-block text-align left">Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi instantaneamente senza dover chiamare.</h3>
                     </div>
-                    <div class="col-60-2"></div>
+                    <div class="col-60-2 bg-center"></div>
                 </div>
             </div>
         </div>
@@ -110,25 +110,36 @@
         <div class="py-50">
             <div class="container">
                 <div class="row">
-                    <div class="col-60-3"></div>
+                    <div class="col-60-3 bg-center"></div>
                     <div class="col-40-3">
                         <h2 class="titolo-block-2 text-left">Da pochi a un fandom</h2>
-                        <h3 class="h3-block-black text-align left">Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai menbri personalizzaabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</h3>
+                        <h3 class="h3-block text-left">Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai menbri personalizzaabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</h3>
                     </div>
                 </div>
             </div>
         </div>
         <!-- FINE BG ITEM3.SVG -->
-
-        <div class="bg-lightgrey py-50">
+        
+        <!-- INIZIO BG ITEM4.SVG -->
+        <div class="py-50">
             <div class="container">
                 <div class="row">
-                    <div class="col-100 height-500">
-
+                    <div class="col-40-4">
+                        <h2 class="titolo-block-2 text-center">Tecnologia affidabile per tenersi in contatto</h2>
+                        <h3 class="h3-block-4 text-center">Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</h3>
+                    </div>
+                    <div class="col-100 height-550 bg-center"></div>
+                    <div class="star">
+                        <h2 class="text-center-2">Pronto a iniziare la tua avventura?</h2>
+                        <div class="download-mac d-flex justify-content-center">
+                            <a href="" class="justify-content-center btn-black btn-lightblue">&#8595; Scarica per Mac</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <!-- FINE BG ITEM4.SVG -->
+
     </main>
     <!-- FINE MAIN-->
 
