[UPD] Added " TOP FOOTER "

--- a/index.html
+++ b/index.html
@@ -145,17 +145,69 @@
 
     <!-- INIZIO FOOTER -->
     <footer>
+
+        <!-- INIZIO TOP FOOTER -->
         <div class="top-footer">
             <div class="container">
                 <div class="row-footer-top">
-                    <div class="col-34"></div>
-                    <div class="col-17"></div>
-                    <div class="col-17"></div>
-                    <div class="col-17"></div>
-                    <div class="col-17"></div>
+                    <div class="col-34">
+                        <h2 class="text-footer">Il tuo posto per parlare</h2>
+                        <div class="d-flex align-items-self-end">
+                            <img src="img/ita.png"  class="img-ita text-center">
+                            <p class="p-top-footer">Italiano &#709;</p>
+                        </div>
+                        <div class="social justify-content-evenly d-flex" >
+                            <img class="social-1" src="https://cdn.discordapp.com/attachments/1219669422231261224/1220749254746705950/twitter.png?ex=66101256&is=65fd9d56&hm=28e3e742662c4b573573ff8f0d0d8e78fc3c92521fccbb6c7e4ab21192fdef94&">
+                            <img class="social-1" src="https://cdn.discordapp.com/attachments/1219669422231261224/1220749255572983909/instagram-logo.png?ex=66101256&is=65fd9d56&hm=7be6703b74b9246827c3fa6f08096983a4744b756461ab6308d90952fc402f12&">
+                            <img class="social-1" src="https://cdn.discordapp.com/attachments/1219669422231261224/1220749255300485120/facebook.png?ex=66101256&is=65fd9d56&hm=c91e8ee80b69ce8cd3720d564e22b050daf0938ebabd665f4f01555aef3fc470&">
+                            <img class="social-1" src="https://cdn.discordapp.com/attachments/1219669422231261224/1220749255074119812/youtube.png?ex=66101256&is=65fd9d56&hm=202635f0f5a82403fac71502d56b3499c40984b0876a83720a23c3faab430b04&">
+                        </div>
+
+                    </div>
+                    <div class="col-17">
+                        <div class="titolo-opz">Prodotto</div>
+                        <div class="opzione opz-py">Scarica</div>
+                        <div class="opzione opz-py">Perché Discord</div>
+                        <div class="opzione opz-py">Nitro</div>
+                        <div class="opzione opz-py">Sicurezza</div>
+                        <div class="opzione opz-py">Assistenza</div>
+                    </div>
+                    <div class="col-17">
+                        <div class="titolo-opz">Compagnia</div>
+                        <div class="opzione opz-py">Chi siamo</div>
+                        <div class="opzione opz-py">Lavora con noi</div>
+                        <div class="opzione opz-py">Marchio</div>
+                        <div class="opzione opz-py">Redazione</div>
+                        <div class="opzione opz-py">Negozio</div>
+                    </div>
+                    <div class="col-17">
+                        <div class="titolo-opz">Risorse</div>
+                        <div class="opzione opz-py">Scarica</div>
+                        <div class="opzione opz-py">Perché Discord</div>
+                        <div class="opzione opz-py">Nitro</div>
+                        <div class="opzione opz-py">Sicurezza</div>
+                        <div class="opzione opz-py">Assistenza</div>
+                        <div class="opzione opz-py">Scarica</div>
+                        <div class="opzione opz-py">Perché Discord</div>
+                        <div class="opzione opz-py">Nitro</div>
+                        <div class="opzione opz-py">Sicurezza</div>
+                        <div class="opzione opz-py">Assistenza</div>
+                        <div class="opzione opz-py">Assistenza</div>
+                    </div>
+                    <div class="col-17">
+                        <div class="titolo-opz">Norme</div>
+                        <div class="opzione opz-py">Scarica</div>
+                        <div class="opzione opz-py">Perché Discord</div>
+                        <div class="opzione opz-py">Nitro</div>
+                        <div class="opzione opz-py">Sicurezza</div>
+                        <div class="opzione opz-py">Assistenza</div>
+                    </div>
                 </div>
             </div>
         </div>
+        <!-- FINE TOP FOOTER -->
+
+        <!-- INIZIO BOTTOM FOOTER-->
         <div class="bottom-footer">
             <div class="container">
                 <div class="row-footer-bottom">
@@ -168,6 +220,8 @@
                 </div>
             </div>
         </div>
+        <!-- FINE BOTTOM FOOTER -->
+        
     </footer>
     <!-- FINE FOOTER -->
 
