--- a/index.html
+++ b/index.html
@@ -213,15 +213,24 @@
                 <div class="row-footer-bottom">
                     <div class="col-100-height-100">
                         <div class="d-flex justify-content-between py-20">
-                            <div class="bottom-footer-content">Logo</div>
-                            <div class="bottom-footer-content">Button</div>
+                            <div class="bottom-footer-content">
+                                <div class="text-left py-10">
+                                    <img src="img/logo.svg" alt="Discord">
+                                </div>
+                            </div>
+                            <div class="bottom-footer-content">
+                                <div class="text-right py-10">
+                                    <a href="" class="btn btn-blu-chiaro">Registrati</a>
+                                </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <!-- FINE BOTTOM FOOTER -->
-        
+
     </footer>
     <!-- FINE FOOTER -->
 
